--- a/router/public/index.html
+++ b/router/public/index.html
@@ -8,6 +8,8 @@
     <script src="https://kit.fontawesome.com/64dfc022a3.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Squada+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
